--- a/design/style.css
+++ b/design/style.css
@@ -77,3 +77,27 @@ footer {
     font-size: 1.5em;
     text-align: right;
 }
+ 
+@media only screen and (max-width: 600px) {
+    .main-display {
+        font-size: 1.5vw;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .main-quote {
+        font-size: 4.5vw;
+    }
+}
+
+@media only screen and (min-width: 889px) {
+    .main-quote {
+        font-size: 4vw;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .main-quote {
+        font-size: 4vw;
+    }
+}
